--- a/src/mysite/polls/templates/polls/index.html
+++ b/src/mysite/polls/templates/polls/index.html
@@ -1,4 +1,5 @@
 {% if latest_question_list %}
+<a href="http://localhost:8050">Go to Dash App</a>
 <ul>
   {% for question in latest_question_list %}
   <li>
